--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,35 @@
   font-family: sans-serif;
   text-align: center;
 }
+p {
+  margin: 0;
+}
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+.buttonWrap {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+.button {
+  display: block;
+  width: 100px;
+  margin: 0 auto;
+  padding: 6px 10px;
+  box-sizing: border-box;
+  border: 1px solid #999;
+  border-radius: 20px;
+  cursor: pointer;
+  border: none;
+  background: #2f4f4f;
+  color: #fff;
+  outline: none;
+}
+table a {
+  color: #000000;
+}
+.button + .button {
+  margin-left: 20px !important;
+}
