--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,23 +1,24 @@
 .buttonWrap {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
 }
 .button {
-  display: block;
-  width: 100px;
   margin: 0 auto;
-  padding: 6px 10px;
-  box-sizing: border-box;
-  border: 1px solid #999;
-  border-radius: 20px;
-  cursor: pointer;
-  border: none;
-  background: #2f4f4f;
-  color: #fff;
-  outline: none;
+  margin-top: 30px;
+
+  a {
+    display: block;
+    width: 100px;
+    padding: 6px 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    cursor: pointer;
+    background: #2f4f4f;
+    color: #fff;
+    outline: none;
+  }
 
   &+ .button {
-    margin-left: 20px !important;
+    margin-left: 20px;
   }
 }
